[package]
name = "botcafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
serde_json = "1"
chrono = "0.4.26"
console = "0.15.7"
